fix overflow in card

--- a/web/css/card.css
+++ b/web/css/card.css
@@ -5,6 +5,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: monospace;
+    background: rgb(24, 24, 24);
 }
 
 .bg {
@@ -37,8 +38,8 @@ body {
 }
 
 .username {
+    position: absolute;
     font-size: 50px;
-    margin-bottom: 10px;
     color: #47879B;
     font-weight: bold;
 }
@@ -48,6 +49,7 @@ body {
 }
 
 .avatar {
+    margin-top: 70px;
     width: 100%;
     border-radius: 15%;
 }
@@ -61,7 +63,6 @@ body {
 
 .info-1-key {
     margin-top: 5px;
-    margin-left: -70px;
     font-size: 25px;
     color: #868995;
 }
@@ -82,13 +83,10 @@ body {
     font-weight: bold;
     margin-top: 8px;
     font-size: 20px;
-    background: linear-gradient(to right, #5C99AB 66%, #2F393E 66%);
+    background: linear-gradient(to right, #5C99AB 50%, #2F393E 50%);
     width: 100%;
     height: 25px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    display: block;
     border-radius: 10px;
     -webkit-text-stroke: 1px #3E4550;
     box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.2);
